# ponomarenko_multi_image

./: CMakeLists.txt  README.md  algo_multi.cpp  algo_single.cpp
framework/: CFramework.h  CImage.cpp  CImage.h  operations.cpp
